--- a/main.css
+++ b/main.css
@@ -58,9 +58,15 @@ body {
     background-image: url("https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-6/htmlcss1-img_burgerphoto.jpeg");
     background-position: center;
     background-size: cover;
-    height:320px;
-    
+    height:420px;
+    word-spacing: 0.2em;
+    letter-spacing: 0.3em;
    
+  }
+
+  #h1id {
+      margin:auto auto;
+
   }
   
   .header h1 {
@@ -70,7 +76,7 @@ body {
     font-size: 40px;
     font-weight: 300;
     line-height: 40px;
-    width: 68%;
+    width: 100%;
     padding:20px;
     margin-left: auto;
     margin-right: auto;
@@ -106,7 +112,7 @@ body {
     width:200px;
     padding:20px;
     margin: 40px auto;
-    border:1px solid orange;
+    border:1px solid #05A8AA;
     
   }
   
